fixed width bug on smaller screens

--- a/css/component.css
+++ b/css/component.css
@@ -76,6 +76,7 @@ html, body, .perspective {
 	position: absolute;
 	height: auto;
 	font-size: 1.5em;
+	display: none;
 }
 
 .outer-nav.vertical {
